fixed spacings in erotic pharmacy

--- a/scheme/public/module/customizedrwd/_modules/banners/three/three.scss
+++ b/scheme/public/module/customizedrwd/_modules/banners/three/three.scss
@@ -403,11 +403,11 @@
 
   .erotic-pharmacy-bg-container {
     width: auto;
-    height: 1350px;
+    height: 1335px;
 
     .erotic-pharmacy-content {
       position: relative;
-      top: -4572px;
+      top: -4556px;
     }
 
     .erotic-pharmacy-content-expand {
@@ -422,7 +422,7 @@
     .producer-month-banner-container {
       position: absolute;
       left: 50%;
-      top: 3222px;
+      top: 3258px;
       width: 350px;
 
       .producer-month-banner-1-img {
@@ -476,7 +476,7 @@
     .erotic-pharmacy-banner-container {
       position: absolute;
       left: 50%;
-      top: 3940px;
+      top: 3954px;
 
       .erotic-pharmacy-banner-img {
         position: relative;
@@ -487,7 +487,7 @@
     .erotic-pharmacy-text-container {
       width: auto;
       position: absolute;
-      top: 3935px;
+      top: 3950px;
       left: 50%;
 
       .erotic-pharmacy-text {
@@ -506,7 +506,7 @@
     .erotic-pharmacy-categories-container {
       position: absolute;
       left: 50%;
-      top: 4300px;
+      top: 4299px;
 
       .erotic-pharmacy-categories-list {
         position: relative;
